--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
     }
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@nuxt/content": "^1.11.1",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.8.3",
-    "nuxt-edge": "latest"
+    "nuxt-edge": "latest",
+    "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
