--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxt/content": "^1.11.1",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/pwa": "^3.3.5",
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "nuxt-edge": "latest",
     "nuxt-fontawesome": "^0.4.0"
